added token configs